--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,14 +5,38 @@
 <title>Insert title here</title>
 </head>
 <body>
+ 
 <h1>Hello from Web Application</h1>
-<form action="/web-demo/home" method="post">
+<form action="/web-demo/welcomeServlet" method="post">
 <input type = "text" name="uname" placeholder ="Enter username"/><br><br>
+<input type = "password" name="pwd" placeholder ="Enter password"/><br><br>
 <input type = "submit" value = "LogIn"/><br><br>
 </form>
 
 <a href="/web-demo/home">click here to login</a> <br><br>
 <a href="/web-demo/about">About Us</a>
+ 
+ 
+ 
+ <!-- 
+ 
+ <h1>Registration Page</h1>
+<form action="/web-demo/register" method="post">
+ <label for="uname" >Enter User Name :</label>
+<input type = "text" name="uname" placeholder ="Enter username"/><br><br>
+<label for="pwd" >Enter Password :</label>
+<input type = "password" name="pwd" placeholder ="Enter password"/><br><br>
+<label for="text" >Enter Date of Birth :</label>
+<input type="date" name="dob" placeholder="Enter DOB"/> <br><br>
+
+<label for="addr" >Address :</label>
+<input type="text" name="addr"/><br><br>
+
+
+<input type = "submit" value = "LogIn"/><br><br>
+</form>
+  -->
+ 
 </body>
 </html>
 
